<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vindoozero.studievolg.MainActivity">

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="357dp"
        android:layout_height="356dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dashboard"
        android:text="@string/dashboard"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.538" />

    <Button
        android:id="@+id/BtnJaarOverzicht"

        android:layout_width="229dp"
        android:layout_height="53dp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:text="@string/BtnJaarOverzicht"
        android:background="@drawable/mybutton"
        android:visibility="visible"
        tools:text="Cijfer Overzicht"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.469"
        app:layout_constraintTop_toBottomOf="@+id/dashboard" />

    <ProgressBar
        android:id="@+id/progressBarJaar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/probar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jaar1" />

    <TextView
        android:id="@+id/jaar1"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/jaar1Bar"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textBar1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:text="@string/textBar1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/progressBarJaar1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/progressBarJaar1"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarJaar1"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/progressBarJaar1"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
