<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vindoozero.studievolg.Jaar_overzicht">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical">

            <Button
                android:id="@+id/btnJaar3"
                android:layout_width="257dp"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:text="@string/btnJaar3"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnJaar2" />

            <Button
                android:id="@+id/btnJaar2"
                android:layout_width="257dp"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:text="@string/btnJaar2"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnJaar1" />

            <Button
                android:id="@+id/btnJaar4"
                android:layout_width="257dp"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:text="@string/btnJaar4"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnJaar3" />

            <Button
                android:id="@+id/btnKeuzeVakken"
                android:layout_width="257dp"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/mybutton"
                android:text="@string/btnKeuzeVakken"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnJaar4"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/btnJaar1"
                android:layout_width="257dp"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="46dp"
                android:background="@drawable/mybutton"
                android:text="@string/btnJaar1"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
