<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vindoozero.studievolg.periode_overzicht">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical">

    <Button
        android:background="@drawable/mybutton"
        android:id="@+id/btnPeriode3"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/btnPeriode3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJaar2"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPeriode4" />

    <Button
        android:background="@drawable/mybutton"
        android:id="@+id/btnPeriode2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/btnPeriode2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJaar1"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPeriode3" />

    <Button
        android:background="@drawable/mybutton"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:id="@+id/btnPeriode4"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/btnPeriode4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJaar3"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp" />

    <Button
        android:background="@drawable/mybutton"
        android:id="@+id/btnPeriode1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnPeriode1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPeriode2"
        app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
